--- a/index.html
+++ b/index.html
@@ -3,3 +3,12 @@
     <title> Hatsune Miku Des</title>
 </head>
 </html>
+<style>
+    body {
+        background: black;
+    }
+</style>
+<canvas></canvas>
+
+<script src="index.js">
+</script>
